crate item functon and route creation
